Atualização logo Implantando o Marketing

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -46,7 +46,7 @@
       <li>
         <a href="https://www.implantandomarketing.com" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p148x148/10443438_834970836554408_8708284076846395352_n.jpg?_nc_cat=110&_nc_sid=1eb0c7&_nc_ohc=qujS9c7KUcQAX-_zF9p&_nc_ht=scontent.fcwb2-2.fna&tp=6&oh=4131aae331b8072f435aa16875400e41&oe=5F7EDB2A" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p148x148/10443438_834970836554408_8708284076846395352_n.jpg?_nc_cat=110&ccb=2&_nc_sid=1eb0c7&_nc_eui2=AeGmUfNzeKsPQYXQecs3WRSpzUcolO-8yQ7NRyiU77zJDk4nhNTwIQpoKxiiN0K7cyqIAHimBr3PGpepwqcDRj4W&_nc_ohc=VUCQPclec7MAX8z8p38&_nc_ht=scontent.fbfh14-1.fna&tp=6&oh=e3ded236d8b369eca45646f4eeec30ab&oe=5FFD6B2A" alt="#" />
           </div>
         </a>
         <div class="resource-details">
