Atualização logo Publicitários Criativos

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -211,7 +211,7 @@
       <li>
         <a href="https://www.publicitarioscriativos.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p148x148/15032643_1353020718049826_2846259359469285587_n.png?_nc_cat=107&_nc_sid=1eb0c7&_nc_ohc=DN6Qc1jWAfkAX-Bxrz7&_nc_ht=scontent.fcwb2-2.fna&oh=e94da091c5a9f6a2e6e310723483f3db&oe=5F803EF7" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p148x148/15032643_1353020718049826_2846259359469285587_n.png?_nc_cat=107&ccb=2&_nc_sid=1eb0c7&_nc_eui2=AeFbs6ekVxdjB4dlRH1E2zyUx0hQ1LLEwt_HSFDUssTC3wFVDaxoZRSur0iRfrJiVJldV70lYq_RW1oSEmR4XYEz&_nc_ohc=hnlxWCa96xwAX-W9M_k&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=30&oh=61ec9861ba58360e8d19fa13dc01878e&oe=5FFECEF7" alt="#" />
           </div>
         </a>
         <div class="resource-details">
