--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -241,7 +241,7 @@
       <li>
         <a href="https://marketingdeconteudo.com/blogs-sobre-marketing/?utm_content=77161851&utm_medium=social&utm_source=twitter" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/87420283_1550048801825055_4810834662576357376_n.png?_nc_cat=103&_nc_sid=1eb0c7&_nc_ohc=wtw4hEFaA9gAX9vUttY&_nc_ht=scontent.fcwb2-1.fna&oh=fd1c51f8228564a263f8f6655250b3d2&oe=5F7F8B0E" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/87420283_1550048801825055_4810834662576357376_n.png?_nc_cat=103&ccb=2&_nc_sid=1eb0c7&_nc_eui2=AeGHX9GLKWrczbbR0W7-2lpdUlWyYlIXVaZSVbJiUhdVpgUbv_xWZJnbR_Bg0V5Db5NR5i2kqUl6fHFUGfIgNATP&_nc_ohc=QtfdgtdkVRUAX-cJIpA&_nc_ht=scontent.fbfh14-2.fna&_nc_tp=30&oh=e810a21d57c409cb90aaa08eeeddd33c&oe=5FFE1B0E" alt="#" />
           </div>
         </a>
         <div class="resource-details">
