Atualização logo Social Media Examiner

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -339,7 +339,7 @@
       <li>
         <a href="https://www.socialmediaexaminer.com/?utm_source=blog&utm_campaign=rc_blogpost" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/12107129_10153622035399383_1373534565017675651_n.png?_nc_cat=110&_nc_sid=1eb0c7&_nc_ohc=Y1c3RV8N--IAX_O54ed&_nc_ht=scontent.fcwb2-2.fna&oh=59eafcb4523d84e8d97412fef9236948&oe=5F800B01" alt="#" />
+            <img src="../../base/images/social-media-examiner.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
