Atualização logo Google

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -369,7 +369,7 @@
       <li>
         <a href="https://learndigital.withgoogle.com/ateliedigital" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/82929329_2257881727849090_3300101949390585856_n.png?_nc_cat=1&_nc_sid=1eb0c7&_nc_ohc=l_Ut6DfWJJAAX8Mhjlx&_nc_ht=scontent.fcwb2-2.fna&oh=494ff0df77a13ff9b1e05a6fcb02cac1&oe=5F7E757A" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p148x148/82929329_2257881727849090_3300101949390585856_n.png?_nc_cat=1&ccb=2&_nc_sid=1eb0c7&_nc_ohc=gk-QngQPxHMAX_251HT&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=30&oh=1033e890d7960b20fa2e9ed11a66e182&oe=60044C0F" alt="#" />
           </div>
         </a>
         <div class="resource-details">
