Atualização logo Mautic

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -388,7 +388,7 @@
       <li>
         <a href="https://br.mautic.org" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/10583979_1537645006454853_5446066427502251888_n.png?_nc_cat=109&_nc_sid=1eb0c7&_nc_ohc=IhF8By2ACGgAX9pO5Ud&_nc_ht=scontent.fcwb2-2.fna&oh=1bc24bc431bd5cb54ae5788f1dca404d&oe=5F7E99C3" alt="#" />
+            <img src="../../base/images/mautic.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
