--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -403,7 +403,7 @@
       <li>
         <a href="https://mailchimp.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/42600271_10155776890365777_3995720217064898560_n.jpg?_nc_cat=1&_nc_sid=1eb0c7&_nc_ohc=aaJLIXp22NUAX_fPJjA&_nc_ht=scontent.fcwb2-2.fna&tp=6&oh=ef8e0a79f17e2c90a85e4dbb4a176b53&oe=5F8138B4" alt="#" />
+            <img src="../../base/images/mailchimp.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
