Update logo Trello

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -418,7 +418,7 @@
       <li>
         <a href="https://trello.com" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t31.0-1/p148x148/20424264_1506678039410436_2666103600142426171_o.png?_nc_cat=100&_nc_sid=1eb0c7&_nc_ohc=pqfFD3d7Na4AX8d01a2&_nc_ht=scontent.fcwb2-2.fna&oh=ab8f22eac05f8309a04535a727f27d98&oe=5F7FFABB" alt="#" />
+            <img src="../../base/images/trello.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
