Superlist -  Supercharged productivity for teams of the future

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -431,18 +431,18 @@
       </li>
       
       <li>
-        <a href="https://www.wunderlist.com/pt/" target="_blank">
+        <a href="https://superlistapp.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/10527513_716367458435177_3415168436016874663_n.png?_nc_cat=106&_nc_sid=1eb0c7&_nc_ohc=YTk-N2Mof0wAX-Zww6W&_nc_ht=scontent.fcwb2-1.fna&oh=0b822f3dadfc53fc0ac9605745bb9e7b&oe=5F81E470" alt="#" />
+            <img src="../../base/images/superlist.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://www.wunderlist.com/pt/" target="_blank">Wunderlist</a>
+            <a href="https://superlistapp.com/" target="_blank">Superlist</a>
           </h2>
-          <p>Ferramenta para Checklist. Outra alternativa é o <a href="https://todoist.com" target="_blank"><mark>Todoist</mark></a></p>
+          <p>Supercharged productivity for teams of the future <br>Ferramenta para Checklist. Outra alternativa é o <a href="https://todoist.com" target="_blank"><mark>Todoist</mark></a></p>
         </div>
-        <a class="resource-button" href="https://www.wunderlist.com/pt/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://superlistapp.com/" target="_blank">Veja</a>
       </li>
       
       <li>
