--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -463,7 +463,7 @@
       <li>
         <a href="https://marketingdeconteudo.com/ferramentas-digitais-para-ambiente-de-trabalho/?utm_content=58895626&utm_medium=social&utm_source=twitter" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_sid=1eb0c7&_nc_ohc=zk_lICQKU2EAX_7XR2x&_nc_ht=scontent.fcwb2-2.fna&oh=145ffe4497f0c5be8fe80735ecd77ef6&oe=5F7F3728" alt="#" />
+            <img src="../../base/images/rockcontent.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -478,7 +478,7 @@
       <li>
         <a href="https://www.hongkiat.com/blog/increase-b2b-sales-tools/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_sid=1eb0c7&_nc_ohc=zk_lICQKU2EAX_7XR2x&_nc_ht=scontent.fcwb2-2.fna&oh=145ffe4497f0c5be8fe80735ecd77ef6&oe=5F7F3728" alt="#" />
+            <img src="../../base/images/hongkiat.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -493,7 +493,7 @@
       <li>
         <a href="https://www.hongkiat.com/blog/hashtag-tools-for-marketing/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_sid=1eb0c7&_nc_ohc=zk_lICQKU2EAX_7XR2x&_nc_ht=scontent.fcwb2-2.fna&oh=145ffe4497f0c5be8fe80735ecd77ef6&oe=5F7F3728" alt="#" />
+            <img src="../../base/images/hongkiat.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -508,7 +508,7 @@
       <li>
         <a href="https://www.atlassian.com/br/software/jira" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/10703722_10152715387648592_9110221371601185088_n.png?_nc_cat=108&_nc_sid=1eb0c7&_nc_ohc=zk_lICQKU2EAX_7XR2x&_nc_ht=scontent.fcwb2-2.fna&oh=145ffe4497f0c5be8fe80735ecd77ef6&oe=5F7F3728" alt="#" />
+            <img src="../../base/images/jira-atlassian.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -593,7 +593,7 @@
       <li>
         <a href="https://seekingalpha.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/11667346_853047441454404_7962724702641437828_n.png?_nc_cat=101&_nc_sid=1eb0c7&_nc_ohc=xDXUeA9ksmgAX-_pEBg&_nc_ht=scontent.fcwb2-1.fna&oh=741fdcd6f600882e96e3fb298cff55fe&oe=5F7F31C5" alt="#" />
+            <img src="../../base/images/seeking-alpha.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
