--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -638,7 +638,7 @@
       <li>
         <a href="https://www.marketwatch.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t31.0-1/p320x320/12768328_10153561039566848_8671990754845590351_o.png?_nc_cat=1&_nc_sid=1eb0c7&_nc_ohc=_FPqNKjVjt0AX83qnTe&_nc_ht=scontent.fcwb2-2.fna&oh=f8019c60742e9ba0849885e26ef8d5c7&oe=5F7FB2FF" alt="#" />
+            <img src="../../base/images/mw.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
