Curso em Video Logo Update

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2024,7 +2024,7 @@
 			<li>
 				<a href="https://www.cursoemvideo.com" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p480x480/82531687_2666904856712152_5829601562317553664_o.png?_nc_cat=100&_nc_eui2=AeGT_1VwjBgb4Xh6PZEkCEjBhpFzp0SYglwO1e6mNXb8iCUXJYDNnDu9xhRUgkdgLYwkJTsf9OICC3at5J1l5LedzgxWjU8ZgNIiAxEICZyxYw&_nc_ohc=LXlFXqMo4TwAX8YhKYx&_nc_ht=scontent.fcwb2-2.fna&oh=1890cc46777fcd976e73ed015ef2f2e4&oe=5EF15D2D" alt="Cursos" />					
+						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/82531687_2666904856712152_5829601562317553664_o.png?_nc_cat=100&ccb=2&_nc_sid=1eb0c7&_nc_ohc=mPi2s27qOJ0AX_KSQor&_nc_ht=scontent.fbfh14-2.fna&_nc_tp=30&oh=1d401d2384a10e6a8072a4c1e8527f1a&oe=6014E616" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
