Alison Logo Update

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2037,7 +2037,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://alison.com/courses" target="_blank">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p480x480/17800468_1520203558014335_5592717726884957228_n.png?_nc_cat=107&_nc_eui2=AeFHurYUjrHc2FzDIKPE8G3TwCcerDcZTQGmthZOskw-1NVYeM87t5Mhk-RQVcLoOdG1BY6c6UdYJtFJ4PhkcxXf8uJjDCwIlLHofBRDavnq4w&_nc_ohc=ARzxLoQchiAAX-uFTTr&_nc_ht=scontent.fcwb2-2.fna&oh=fc46b1023ad42b195e6f3e03010e5852&oe=5EFBAF7E" alt="Cursos" />
+						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p480x480/18893145_1301969523185172_3698252459643219792_n.jpg?_nc_cat=104&ccb=2&_nc_sid=7206a8&_nc_ohc=OQqrM1267UMAX-P6K15&_nc_ht=scontent.fbfh14-2.fna&tp=6&oh=25ad08ea8b4d6453d0cdb6c7e42fb15d&oe=60145D27" alt="Cursos" />
 					</a>
 				</div>
 				<div class="resource-details">
