Learncafe logo Update

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2050,7 +2050,7 @@
 			<li>
 				<a href="https://www.learncafe.com/cursos" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/19274859_1574479229276495_2862538952386405924_n.png?_nc_cat=111&_nc_eui2=AeG-s9p9537WN_8L7OTkh1Y2yZOD0PiHJ8zNwyNPmLeOmYH01RuyOJrTD1bcTVO8tVPa_gSuGnbnCn2N80RpiVEIaZ8jvaiTnGnZOnDjseUFbw&_nc_ohc=vAJ2gmIBMv4AX_4i9os&_nc_ht=scontent.fcwb2-2.fna&oh=782cbe9a86a195d97ecaadcf8a9e7524&oe=5EFDEB13" alt="Cursos" />					
+						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/19274859_1574479229276495_2862538952386405924_n.png?_nc_cat=111&ccb=2&_nc_sid=1eb0c7&_nc_ohc=OzuiMMQGYwEAX860eSj&_nc_ht=scontent.fbfh14-1.fna&oh=d025ad3077fd9cc1326b558ad6ffb49c&oe=60167CED" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
