Bit Degree Logo Update

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2076,7 +2076,7 @@
 			<li>
 				<a href="https://bitdegree.org" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p480x480/62500920_425639414686982_6571372294424231936_o.jpg?_nc_cat=110&_nc_eui2=AeGyXklvpkV0P3evi5-BtlgSzd_AOFVJQRIob528xUgXDFvQ_FXvgXiKVY7VoE2oaujVM_w-EEjMFljmCZ489LNOvHSWpcpsOAVtoP6o62FC-A&_nc_ohc=18ugBv65AFoAX_mOiO9&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=6&oh=3536f21e2c8fd439a95932539ad31b20&oe=5EEE040E" alt="Cursos" />					
+						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/62500920_425639414686982_6571372294424231936_o.jpg?_nc_cat=110&ccb=2&_nc_sid=1eb0c7&_nc_ohc=BhGjcmNSacIAX-FWPFN&_nc_ht=scontent.fbfh14-1.fna&tp=6&oh=e4ff137567c1edc5fbcb8d551c2ba267&oe=60163A2C" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
