Softblue logo Update

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2102,7 +2102,7 @@
 			<li>
 				<a href="https://www.softblue.com.br/" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/15826611_1291213974287324_710776575585013482_n.png?_nc_cat=101&_nc_sid=dbb9e7&_nc_ohc=IsJ2XuDNAiwAX9PzcIs&_nc_ht=scontent.fcwb2-1.fna&oh=3ce52e2bb70687f0926c49c13ce67746&oe=5EA7C890" alt="Cursos" />					
+						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/15826611_1291213974287324_710776575585013482_n.png?_nc_cat=101&ccb=2&_nc_sid=1eb0c7&_nc_ohc=HyYPd8bgT24AX9n_GlY&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=30&oh=46be513fa8a84a2e5303b7c0ae8763c2&oe=6013A690" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
