Sebrae Cursos logo Update

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2128,7 +2128,7 @@
 			<li>
 				<a href="https://www.sebrae.com.br/sites/PortalSebrae/cursosonline" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/15823063_658816224289753_6675418139788142672_n.jpg?_nc_cat=111&_nc_sid=dbb9e7&_nc_ohc=ERuuCPZmMx4AX92-J2K&_nc_ht=scontent.fcwb2-2.fna&oh=ed706136218a12f30bbeb51f9ee55f09&oe=5E9F954E" alt="Cursos" />					
+						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/15823063_658816224289753_6675418139788142672_n.jpg?_nc_cat=111&ccb=2&_nc_sid=1eb0c7&_nc_ohc=iPdyYYBF4sQAX-C3bZ8&_nc_ht=scontent.fbfh14-1.fna&tp=6&oh=fcecc348bffb4ddb95cae54c479650aa&oe=601600FA" alt="Cursos" />					
 					</div>
 				</a>
 				<div class="resource-details">
