--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1303,7 +1303,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://www.designculture.com.br/10-boxes-planificadas-em-eps-totalmente-gratis-1" target="_blank">
-						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p200x200/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&_nc_ohc=0juuoC-fNTAAQnVFh2Dr_sLKFP35eF3dGqWcOknflrz_WhubpHRoREfBw&_nc_ht=scontent.fbfh14-2.fna&oh=9c6aade2df66427df3f7b4a97a3e9c9a&oe=5E8AB10E" alt="Retro Vectors" />
+						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&ccb=2&_nc_sid=1eb0c7&_nc_ohc=I-GVdiLEdhYAX-rNk2k&_nc_ht=scontent.fbfh14-2.fna&tp=6&oh=5eb5758f9b2cee8bf6db767eabeb62de&oe=6013255B" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -1865,7 +1865,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://makeagif.com/" target="_blank">
-						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/22490110_1488136587902126_5060219529388402680_n.png?_nc_cat=104&_nc_ohc=EoM6yFEeiRYAQkEdz4urZd-nyqb1Segm6XQhhLNbYxWV1qCXTKcbqk9Uw&_nc_ht=scontent.fbfh14-2.fna&oh=51390e2fe1132dfe3a27d88f4eea95bd&oe=5E848165" alt="Retro Vectors" />
+						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/22490110_1488136587902126_5060219529388402680_n.png?_nc_cat=104&ccb=2&_nc_sid=1eb0c7&_nc_ohc=Z9baBjmETlgAX_LB1aA&_nc_ht=scontent.fbfh14-2.fna&oh=d700132964e2ce847e7f39745a7bcf0b&oe=60154B1B" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
