--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1303,7 +1303,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://www.designculture.com.br/10-boxes-planificadas-em-eps-totalmente-gratis-1" target="_blank">
-						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/s320x320/53321402_556033561562529_4522749881521012736_n.jpg?_nc_cat=107&ccb=2&_nc_sid=1eb0c7&_nc_ohc=G7XB5BaEz78AX_8zf9j&_nc_ht=scontent.fbfh14-1.fna&tp=7&oh=61968beffca951baf67024f6292525e9&oe=601435F2" alt="Retro Vectors" />
+						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&ccb=2&_nc_sid=1eb0c7&_nc_ohc=I-GVdiLEdhYAX-rNk2k&_nc_ht=scontent.fbfh14-2.fna&tp=6&oh=5eb5758f9b2cee8bf6db767eabeb62de&oe=6013255B" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
@@ -1978,7 +1978,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://www.webyurt.com/free-website-design-tools?fbclid=IwAR3_2pzqLzO8BhzlO8LZa_uqcJhymogT76vR3OmcTvFREiNILAF6G1L--uY/" target="_blank">
-						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/s320x320/53321402_556033561562529_4522749881521012736_n.jpg?_nc_cat=107&_nc_sid=dbb9e7&_nc_eui2=AeFvIHmutwug6ylYTrhOZQUrtLPymL92Jn20s_KYv3YmfZyB9xh47rvmWl5_b_pRmdtLTPsfttiYBx2yVZsLFyad&_nc_ohc=O8Z3DFnethYAX90o1ls&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=7&oh=6311a71dbd12da874e92155eb883bc57&oe=5F0743F2" alt="My Favorites" />
+						<img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/s320x320/53321402_556033561562529_4522749881521012736_n.jpg?_nc_cat=107&ccb=2&_nc_sid=1eb0c7&_nc_ohc=G7XB5BaEz78AX_8zf9j&_nc_ht=scontent.fbfh14-1.fna&tp=7&oh=61968beffca951baf67024f6292525e9&oe=601435F2" alt="My Favorites" />
 					</a>
 				</div>
 				<div class="resource-details">
