--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -199,7 +199,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.designimador.com.br/" target="_blank">
-            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/13501628_1321000701246950_6488672590597745421_n.png?_nc_cat=111&_nc_sid=dbb9e7&_nc_ohc=S5YNZUjJLvYAX-TYJYZ&_nc_ht=scontent.fbfh14-1.fna&oh=a86f6d7f8ee481590c414629f541eb3e&oe=5E973A24" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/13501628_1321000701246950_6488672590597745421_n.png?_nc_cat=111&ccb=2&_nc_sid=1eb0c7&_nc_ohc=UxjNtmYbsOYAX9OsZNT&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=30&oh=c9e290af01d05c03245ce440777bd044&oe=6016DEA4" alt="#" />
           </a>
         </div>
         <div class="resource-details">
