Design Mão de Vaca Logo Update

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -214,7 +214,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://designermaodevaca.com/categoria/post" target="_blank">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/34532208_2177931398889843_1389285009583505408_o.png?_nc_cat=109&_nc_sid=dbb9e7&_nc_ohc=jkAXtVaFCIMAX-huP5v&_nc_ht=scontent.fcwb2-2.fna&oh=4465fbd661e8a624284b7a93d99abf3d&oe=5EA22919" alt="#" />
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/34532208_2177931398889843_1389285009583505408_o.png?_nc_cat=109&ccb=2&_nc_sid=1eb0c7&_nc_ohc=EA93a8XUKgMAX-uQJlR&_nc_ht=scontent.fbfh14-2.fna&_nc_tp=30&oh=da0161637153d669466ddba098fc41e3&oe=6015F019" alt="#" />
           </a>
         </div>
         <div class="resource-details">
