Adobe Blog Logo Update

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -248,7 +248,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://theblog.adobe.com/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/87502430_2790475761007109_724369019271905280_o.png?_nc_cat=1&_nc_sid=dbb9e7&_nc_ohc=pXx3WJcL280AX_pdgzE&_nc_ht=scontent.fcwb2-1.fna&oh=50b2c3f7606e15b37ef18efd3b0bfe1a&oe=5EA21623" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/101051048_2998825346838815_1214873912475648000_o.png?_nc_cat=107&ccb=2&_nc_sid=1eb0c7&_nc_ohc=yTlVzfJLhoQAX_AwiBQ&_nc_oc=AQlk5oTXyqdPqlCXk1EmKLHyS1OiR_C_BNVnaUjqo5eJAnEni9OeB2RGQahbUBDBM3PdhjE5o7PbmXktIS_0MX1w&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=30&oh=d87373c5055f85e5469ffe5f8a0214ae&oe=601609D7" alt="#" />
           </a>
         </div>
         <div class="resource-details">
