Github Diego Fernandes

--- a/my/paginas/portfolios/index.html
+++ b/my/paginas/portfolios/index.html
@@ -280,6 +280,27 @@
             </div>
             <a class="resource-button" href="https://www.behance.net/valpacheco" target="_blank">Veja</a>
           </li>
+
+          <div id="Github">
+            <div class="linha"></div>            
+              <h2 class="margen-titulo color-portfolio">Inspiração</h2>        
+            <div class="linha"></div>
+          </div>
+
+          <li>
+            <div class="resource-icon">
+              <a href="https://github.com/diego3g" target="_blank">
+                <img src="../../base/images/portfolios.jpg" alt="portfolio" />
+              </a>
+            </div>
+            <div class="resource-details">
+              <h2>
+                <a href="https://github.com/diego3g" target="_blank">Diego Fernandes</a>
+              </h2>
+              <p>Github Diego Fernandes | Rocketseat</p>
+            </div>
+            <a class="resource-button" href="https://github.com/diego3g" target="_blank">Veja</a>
+          </li>
              
           <div id="fontes">
             <div class="linha"></div>            
