--- a/my/paginas/portfolios/index.html
+++ b/my/paginas/portfolios/index.html
@@ -331,7 +331,22 @@
             </div>
             <a class="resource-button" href="https://github.com/filipedeschamps" target="_blank">Veja</a>
           </li>
-             
+                                 
+          <li>
+            <div class="resource-icon">
+              <a href="https://github.com/marcobrunodev" target="_blank">
+                <img src="../../base/images/portfolios.jpg" alt="portfolio" />
+              </a>
+            </div>
+            <div class="resource-details">
+              <h2>
+                <a href="https://github.com/marcobrunodev" target="_blank">Marco Bruno</a>
+              </h2>
+              <p>Github Marco Bruno | Collabcode</p>
+            </div>
+            <a class="resource-button" href="https://github.com/marcobrunodev" target="_blank">Veja</a>
+          </li>
+
           <div id="fontes">
             <div class="linha"></div>            
               <h2 class="margen-titulo color-portfolio">Inspiração</h2>        
