Useful Plugins for Exporting XD Designs to HTML & CSS

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -336,6 +336,22 @@
         <a class="resource-button" href="https://overflow.io/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <a href="https://letsxd.com/guides/export-xd-to-html-css-plugins?scid=0dce1871-79b9-4716-8c46-b24119d56e83&mv=social&mv2=owned_social" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />          
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://letsxd.com/guides/export-xd-to-html-css-plugins?scid=0dce1871-79b9-4716-8c46-b24119d56e83&mv=social&mv2=owned_social" target="_blank">Useful Plugins for Exporting XD Designs to HTML & CSS</a>
+          </h2>
+          <p>Adobe XD Plugins
+          </p>
+        </div>
+        <a class="resource-button" href="https://letsxd.com/guides/export-xd-to-html-css-plugins?scid=0dce1871-79b9-4716-8c46-b24119d56e83&mv=social&mv2=owned_social" target="_blank">Veja</a>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Prototipagem</h2>
       <div class="linha"></div>
