Update logo Make a gif

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1865,7 +1865,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://makeagif.com/" target="_blank">
-						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/22490110_1488136587902126_5060219529388402680_n.png?_nc_cat=104&ccb=2&_nc_sid=1eb0c7&_nc_ohc=Z9baBjmETlgAX_LB1aA&_nc_ht=scontent.fbfh14-2.fna&oh=d700132964e2ce847e7f39745a7bcf0b&oe=60154B1B" alt="Retro Vectors" />
+						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/cp0/p60x60/22490110_1488136587902126_5060219529388402680_n.png?_nc_cat=104&ccb=3&_nc_sid=1eb0c7&_nc_ohc=UUwM_GK1e54AX_E7yBm&_nc_ht=scontent.fbfh14-2.fna&_nc_tp=30&oh=70930506a0483e3d6726a76671bca9d3&oe=604EC2B6" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
