Heroicons - Beautiful hand-crafted SVG icons, by the makers of Tailwind CSS.

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1447,6 +1447,21 @@
     <div class="linha"></div>
 
       <li>
+        <a href="https://heroicons.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://heroicons.com/" target="_blank">Heroicons</a>
+          </h2>
+          <p>Beautiful hand-crafted SVG icons, by the makers of Tailwind CSS.</p>
+        </div>
+        <a class="resource-button" href="https://heroicons.com/" target="_blank">Veja</a>
+      </li>   
+
+      <li>
         <a href="https://www.iconfinder.com/" target="_blank">
           <div class="resource-icon">
             <img src="https://cdn0.iconfinder.com/static/img/logo/black.svg?32b294b019" alt="#" />
