--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -1164,6 +1164,28 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://thispersondoesnotexist.com/" target="_blank">Veja</a>
       </li>
 
+      <div class="linha"></div>
+      <h2 class="margen-titulo color-design">Figma</h2>
+      <div class="linha"></div>
+
+      
+      <li>
+        <div class="resource-icon">
+          <a href="https://thispersondoesnotexist.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://thispersondoesnotexist.com/" target="_blank">Mesh Gradient
+            </a>
+          </h2>
+          <p>Mesh Gradient generates a gradient image with an underlying 2d mesh</p>
+        </div>
+        <a class="resource-button" href="https://thispersondoesnotexist.com/" target="_blank">Veja</a>
+      </li>
+
+
     </ul>
       <ul class="sidebar-navigation">
               <li><a href="../apoio/index.html"><div class="circle"></div>Apoio</a></li>	
