--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1611,6 +1611,22 @@
         <a class="resource-button" href="https://css.gg/" target="_blank">Veja</a>        
         <div id="pre-processors"></div>
       </li>  
+      
+      <li>
+        <a href="https://icons8.com/animated-icons" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://icons8.com/animated-icons" target="_blank">Animated icons 2.0</a>
+          </h2>
+          <p>900+ animated icons to make your projects exceptional.</p>
+        </div>
+        <a class="resource-button" href="https://icons8.com/animated-icons" target="_blank">Veja</a>        
+        <div id="pre-processors"></div>
+      </li>  
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Pre-processors</h2>
