Fonts Google | Icons

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1537,6 +1537,21 @@
       </li>  
 
       <li>
+        <a href="https://fonts.google.com/icons?selected=Material+Icons" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/googleIcons.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://fonts.google.com/icons?selected=Material+Icons" target="_blank">Google Fonts</a>
+          </h2>
+          <p>Icons</p>
+        </div>
+        <a class="resource-button" href="https://fonts.google.com/icons?selected=Material+Icons" target="_blank">Veja</a>
+      </li>  
+
+      <li>
         <a href="https://nucleoapp.com/" target="_blank">
           <div class="resource-icon">
             <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/17759967_1242890822497106_1662123643343366018_n.png?_nc_cat=100&ccb=2&_nc_sid=1eb0c7&_nc_ohc=l-s-13V9YQEAX9uyMnv&_nc_ht=scontent.fcwb2-2.fna&oh=95fc94b72a9f852db3378d422baecb7b&oe=5FC798F0" alt="#" />
