Atualizando thumbnail ux page

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -48,7 +48,7 @@
       <li>
         <a href="https://developer.apple.com/design/human-interface-guidelines/ " target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p148x148/109764302_3289428621149720_6353557589794353911_o.png?_nc_cat=1&_nc_sid=1eb0c7&_nc_ohc=zYcuKxc4-qkAX-4L2JO&_nc_ht=scontent.fcwb2-2.fna&oh=940d8038b9346a00bb86da7cf3b44573&oe=5F87C5BE" alt="#" />          
+            <img src="../../base/images/apple.png" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -143,7 +143,7 @@
       <li>
         <a href="https://www.strawpoll.me/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/13307433_1115499378510722_2943287756945467912_n.png?_nc_cat=104&_nc_sid=dbb9e7&_nc_eui2=AeGsRjjtWYuwNSuVqlYNg4HKsgmqs3rWxFmyCaqzetbEWe6w5CGj01gfFoTPfC_0pmSVF-zN85xaPfaqkKGGlbD-&_nc_ohc=uHoB793FpkcAX9SqfZi&_nc_ht=scontent.fcwb2-1.fna&oh=2c6212f47aea7d43f611a53f556ba6c3&oe=5F2625EA" alt="#" />          
+            <img src="../../base/images/straw-poll.png" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -263,7 +263,7 @@
       <li>
         <a href="https://framer.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p160x160/35282540_985848591571651_1114989551744450560_n.jpg?_nc_cat=110&_nc_sid=dbb9e7&_nc_ohc=_GyKvZouOA0AX8kw0iZ&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=6&oh=a7795d94c8f2642eb731a44b374864fd&oe=5EA50694" alt="#" />          
+            <img src="../../base/images/framer.png" alt="#" />          
           </div>
         </a>        
         <div class="resource-details">
@@ -278,7 +278,7 @@
       <li>
         <a href="https://maze.design/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/31165840_355665734925368_3369729425162633216_n.png?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=CtVGXiURmVQAX_B5zML&_nc_ht=scontent.fcwb2-1.fna&oh=26df758b2d5f9844ed322aa43a5daa48&oe=5EA30062" alt="#" />          
+            <img src="../../base/images/maze.png" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -374,7 +374,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.protopie.io/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/68260330_2455279271184629_8583132763962474496_n.jpg?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=8YxOeQMwwJkAX_4wOF5&_nc_ht=scontent.fcwb2-1.fna&_nc_tp=6&oh=c51db8e4dbec4d4a7bae2b1a2e918d71&oe=5EA52BA5" alt="#" />
+            <img src="../../base/images/protopie.png" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -518,7 +518,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="http://mwpt.com.br/novidades/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t31.0-1/p320x320/21741098_1587811881286037_3244959824989961902_o.png?_nc_cat=106&_nc_sid=dbb9e7&_nc_ohc=5cc6hgcdM9EAX-GhMUE&_nc_ht=scontent.fcwb2-1.fna&oh=5d7721bdd95b90c03834e4b8c73981fe&oe=5EA565A7" alt="#" />
+            <img src="../../base/images/web-para-todos.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -582,7 +582,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://www.uxbooth.com/articles/" target="_blank">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/10983123_10152845267500959_6016158940402575788_n.png?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=qbXWiMyUjqYAX88fi0I&_nc_ht=scontent.fbfh14-2.fna&oh=b3eb32595106e271cb8ccf731b0aa320&oe=5EAB162C" alt="#" />
+            <img src="../../base/images/ux-booth.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -672,7 +672,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://usabilitygeek.com/" target="_blank">
-            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/1456709_543038692446114_1751168257_n.png?_nc_cat=107&_nc_ohc=9Ad23RY0NOUAQljhMuGKqUEeqDUUzQ78eDAOvcwugBU_gfkSSbq9F1T_g&_nc_ht=scontent.fbfh14-1.fna&oh=157d8343c842a3e6c9b8ff2447ec1dea&oe=5EAEB9D7" alt="#" />
+            <img src="../../base/images/geek.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -687,7 +687,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://uxmastery.com/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/c7.0.320.320a/p320x320/10445968_940408919350826_6743417754018838516_n.png?_nc_cat=101&_nc_sid=dbb9e7&_nc_ohc=b6g6AWChkYwAX-92GL_&_nc_ht=scontent.fcwb2-1.fna&oh=fcf38986270c77b67db0e37341c66725&oe=5EA31607" alt="#" />
+            <img src="../../base/images/ux-mastery.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -828,7 +828,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://brasil.uxdesign.cc/meu-checklist-de-tarefas-para-um-teste-de-usabilidade-2c5e552ce259" target="_blank">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/30443040_10156205485194471_8154900686011494256_n.png?_nc_cat=110&_nc_sid=dbb9e7&_nc_ohc=T_3iBWT3Ir0AX-jE_9w&_nc_ht=scontent.fcwb2-2.fna&oh=5b122d60487b51ec8881d1f282e84469&oe=5EA56EF6" alt="#" />
+            <img src="../../base/images/uxdesign.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -843,7 +843,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://designmodo.com/repeat-grid-adobe-xd/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/30726983_1611603245555672_2263510284037630351_n.png?_nc_cat=103&_nc_sid=dbb9e7&_nc_ohc=pmRg-plmyb8AX9MF6B1&_nc_ht=scontent.fcwb2-1.fna&oh=5d3c1cf2b20f370095c000df9b93327f&oe=5EA3D0BB" alt="#" />
+            <img src="../../base/images/designmodo.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -921,23 +921,8 @@ and share your amazing creations in a matter of minutes.</p>
       
       <li>
         <div class="resource-icon">
-          <a href="http://www.uipatternhub.com/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/46646591_2321442431218855_6172213083499397120_n.png?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=8yYaHnoP7f4AX-vNEFY&_nc_ht=scontent.fcwb2-1.fna&oh=bfa583e38ad3056fded2e54c3d3ef600&oe=5EA2E520" alt="#" />
-          </a>
-        </div>
-        <div class="resource-details">
-          <h2>
-            <a href="http://www.uipatternhub.com/" target="_blank">UIPatternHub</a>
-          </h2>
-          <p>Patterns</p>
-        </div>
-        <a class="resource-button" href="http://www.uipatternhub.com/" target="_blank">Veja</a>
-      </li>
-
-      <li>
-        <div class="resource-icon">
           <a href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/603766_10154064704532228_356610347946095927_n.png?_nc_cat=1&_nc_sid=dbb9e7&_nc_ohc=f_ychBi_mHUAX8_SZNF&_nc_ht=scontent.fcwb2-1.fna&oh=9bf9416dcc2bf0db88112ce699fc49b0&oe=5EA238B4" alt="#" />
+            <img src="../../base/images/idf.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -1071,7 +1056,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://designculture.com.br/o-que-e-ui-design-e-ux-design" target="_blank">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&_nc_sid=dbb9e7&_nc_ohc=UXM8SNS84iQAX9OcixA&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=6&oh=1d5f1b0e3a14b49191bf2677fdfd27ec&oe=5EA33D72" alt="#" />
+            <img src="../../base/images/designculture.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
