The Best Free Wireframe Tools For UX Designers in 2021

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -417,6 +417,21 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://www.hongkiat.com/blog/useful-offline-utensils-and-toolkits-for-designers/" target="_blank">Veja</a>
       </li> 
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://blog.digitalogy.co/best-free-wireframe-tools-for-ux-designers/?fbclid=IwAR0VSdz75pzp-FRH2KFGGfRYMI-n5Df1i6QuQRV3O6a9lXR_-42BdXLAz40" target="_blank">
+            <img src="../../base/images/digitalogy.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://blog.digitalogy.co/best-free-wireframe-tools-for-ux-designers/?fbclid=IwAR0VSdz75pzp-FRH2KFGGfRYMI-n5Df1i6QuQRV3O6a9lXR_-42BdXLAz40" target="_blank">The 12 Best Free Wireframe Tools For UX Designers In 2021</a>
+          </h2>
+          <p>Digitalogy</p>
+        </div>
+        <a class="resource-button" href="https://blog.digitalogy.co/best-free-wireframe-tools-for-ux-designers/?fbclid=IwAR0VSdz75pzp-FRH2KFGGfRYMI-n5Df1i6QuQRV3O6a9lXR_-42BdXLAz40" target="_blank">Veja</a>
+      </li> 
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Sitemaps/Mindmaps</h2>
       <div class="linha"></div>
