Reveal JS - The HTML Presentation Framework

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1012,8 +1012,7 @@
           </h2>
           <p>Cybernetically enhanced web apps | No virtual DOM</p>
         </div>
-        <a class="resource-button" href="https://svelte.dev/" target="_blank">Veja</a>     
-        <div id="animacoes"></div>   
+        <a class="resource-button" href="https://svelte.dev/" target="_blank">Veja</a>              
       </li>      
       
       <li>
@@ -1388,7 +1387,22 @@
           </h2>
           <p>Efeito revista para pdf</p>
         </div>
-        <a class="resource-button" href="http://3dflipbook.net/documentation?fbclid=IwAR2q_stRrGKk6rup2HsVRjls4raUPfX0B-J5FUm1KrywcfANieotngdeOcw" target="_blank">Veja</a>
+        <a class="resource-button" href="http://3dflipbook.net/documentation?fbclid=IwAR2q_stRrGKk6rup2HsVRjls4raUPfX0B-J5FUm1KrywcfANieotngdeOcw" target="_blank">Veja</a>        
+      </li>  
+
+      <li>
+        <a href="https://revealjs.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://revealjs.com/" target="_blank">Reveal JS</a>
+          </h2>
+          <p>THE HTML PRESENTATION FRAMEWORK</p>
+        </div>
+        <a class="resource-button" href="https://revealjs.com/" target="_blank">Veja</a>
         <div id="zoom"></div>
       </li>  
 
